add register voted variables selection and expose option to user